# image-video-generator

./: .gitignore  README.md  app.py  requirements.txt  start.sh
.streamlit/: config.toml
docs/: SCOPE_PROGRESS.md
src/: __init__.py  agent.py
src/image/: __init__.py  generator.py
src/readers/: __init__.py  google_docs.py  prompt_parser.py  word.py
src/utils/: __init__.py  config.py
video-generator/: .dockerignore  .gitignore  Dockerfile  Makefile  app.py  pyproject.toml  requirements.txt  streamlit_secrets.toml
video-generator/.streamlit/: config.toml  secrets.toml.example
video-generator/config/: settings.json
video-generator/docs/: requirements.md
video-generator/scripts/: check_env.py  start.sh
video-generator/src/: __init__.py
video-generator/src/audio/: __init__.py  tts.py
video-generator/src/bgm/: __init__.py  beatoven.py
video-generator/src/image/: generator.py
video-generator/src/parser/: script.py
video-generator/src/utils/: __init__.py  config.py  exceptions.py  logging.py  retry.py
video-generator/src/video/: __init__.py  editor.py  stock.py
video-generator/tests/: test_api_clients.py  test_utils.py
動画生成/: .gitignore  CLAUDE.md  app.py  docker-compose.yml
動画生成/docs/: OPERATIONS.md  SCOPE_PROGRESS.md
動画生成/src/audio/: tts.py
動画生成/src/image/: __init__.py
動画生成/src/parser/: __init__.py
動画生成/src/utils/: config.py  health.py
動画生成/src/video/: stock.py
動画生成/tests/: conftest.py  test_parser.py
